phpMyAdmin/deploy.yaml
#---------------------------------------- phpmyadmin Resources ----------------------------------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: wordpress-stack
  labels:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/tier: frontend 
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/environment: dev
    app.kubernetes.io/namespace: wordpress-stack
    app.kubernetes.io/part-of: wordpress-project      
spec: 
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: phpmyadmin
        app.kubernetes.io/tier: frontend 
        app.kubernetes.io/version: "0.1"
        app.kubernetes.io/environment: dev
        app.kubernetes.io/namespace: wordpress-stack
        app.kubernetes.io/part-of: wordpress-project
    template:
      metadata:
        labels:  
          app.kubernetes.io/name: phpmyadmin
          app.kubernetes.io/tier: frontend
          app.kubernetes.io/version: "0.1"
          app.kubernetes.io/environment: dev
          app.kubernetes.io/namespace: wordpress-stack
          app.kubernetes.io/part-of: wordpress-project
      spec:
        containers:
          - name: phpmyadmin
            image: phpmyadmin:5.1
            ports:
              - containerPort: 80
